<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">T9Searcher</string>
    <string name="action_settings">Settings</string>
    <string name="frequent_app">经常使用的App</string>
    <string name="key1">1</string>
	<string name="key2">2 ABC</string>
	<string name="key3">3 DEF</string>
	<string name="key4">4 GHI</string>
	<string name="key5">5 JKL</string>
	<string name="key6">6 MNO</string>
	<string name="key7">7 PQRS</string>
	<string name="key8">8 TUV</string>
	<string name="key9">9 WXYZ</string>
	<string name="key_return">返回</string>
	<string name="key0">0</string>
	<string name="key_backspace">删除</string>
</resources>
